--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="hint_add_the_city_name">Add the city name</string>
     <string name="message_toast_offline">There are no internet connection</string>
     <string name="message_toast_online">There are internet connection</string>
+    <string name="fab_description">Favorite</string>
 </resources>
